src/objects/ETL_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log_Datetime__c</fullName>
        <description>Date and time of item</description>
        <label>Log Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <description>Text of log message</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Script_Name__c</fullName>
        <description>Description of logged item</description>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ETL Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Log_Datetime__c</columns>
        <columns>Log_Script_Name__c</columns>
        <columns>Log_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ETL{00000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETL Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>